[package]
name = "certify"
version = "0.5.1"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/certify"
repository = "https://github.com/tyrchen/certify"
homepage = "https://github.com/tyrchen/certify"
description = """
Generate client cert with CA cert
"""
readme = "README.md"
categories = ["development-tools"]
keywords = ["x509", "certificate"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pem = "1.1.0"
rcgen = { version = "0.10.0", features = ['x509-parser'] }
thiserror = "1.0.37"
time = "0.3.17"
x509-parser = "0.14.0"
yasna = { version = "0.5.0", features = ["bit-vec"] }
